# statiff

./: CMakeLists.txt  README.md
include/: headers.h  options.h  statiff.hpp
src/: helper.cpp  stat_tiff.cpp  statiff.cpp
